[tool.poetry]
name = "authenticator"
version = "0.1.0"
description = ""
authors = ["kyb_home <kyb07@o2o.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}
aiosqlite = "^0.21.0"
asyncpg = "^0.30.0"
pydantic-settings = "^2.8.1"
pyjwt = "^2.10.1"
passlib = "^1.7.4"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
psycopg2-binary = "^2.9.10"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
